@@ -7,6 +7,7 @@ Additions:
 
    * WEBP image loader support.
    * EVAS_CALLBACK_IMAGE_RESIZE.
+   * Evas_Device registration/manipulation/querying API
 
 Improvements:
 
